# kurwa

./: .appveyor.yml  .clang-format  .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
documentation/: codestyle.md  structure.md
framework/: CMakeLists.txt
framework/include/kw/base/: array.h  bitset.h  bitvector.h  deque.h  detected.h  fast_name.h  fixed_hash_map.h  fixed_hash_set.h  fixed_list.h  fixed_map.h  fixed_multimap.h  fixed_multiset.h  fixed_set.h  fixed_slist.h  fixed_string.h  fixed_substring.h  fixed_vector.h  function.h  hash_map.h  hash_set.h  list.h  map.h  numeric_limits.h  optional.h  pair.h  priority_queue.h  queue.h  ring_buffer.h  set.h  shared_ptr.h  signal.h  slist.h  slow.h  stack.h  string.h  string_hash_map.h  string_map.h  string_view.h  tuple.h  types.h  (+7 more)
framework/include/kw/base/internal/: signal_impl.h  slow_impl.h
framework/include/kw/concurrency/: atomic.h  atomic_queue.h  mutex.h  semaphore.h  shared_mutex.h  thread.h
framework/include/kw/concurrency/internal/: atomic_queue_impl.h
framework/include/kw/core/: game.h  game_native.h  i_game.h  message_box.h  scene_module.h  window_module.h
framework/include/kw/core/internal/: game_impl.h  i_game_impl.h  message_box_impl.h
framework/include/kw/debug/: assert.h  runtime_error.h  stacktrace.h
framework/include/kw/debug/internal/: assert_impl.h  runtime_error_impl.h
framework/include/kw/ecs/: imgui_module.h  scene_module.h
framework/include/kw/filesystem/: filesystem_utils.h
framework/include/kw/input/: control.h  gamepad.h  input_module.h  keyboard.h  mouse.h
framework/include/kw/math/: math.h
framework/include/kw/math/internal/: math_impl.h
framework/include/kw/reflection/: any.h  any_function.h  reflection.h  type.h
framework/include/kw/reflection/internal/: any_function_impl.h  any_impl.h  meta_impl.h  reflection_impl.h  type_containers.h  type_impl.h
framework/include/kw/render/: backend_gl.h  backend_opengl.h  backend_vk.h  command_buffer.h  commands.h  render_module.h  renderer.h  renderer_gl.h  renderer_vk.h  renderering_backend.h  rendering_backend.h  semaphore.h  types.h  update_queue.h  vk_validation.h
framework/include/kw/render/internal/: backend.h  backend_opengl.h  commands.h  types.h
framework/include/kw/sound/: sound.h  sound_module.h  sound_stream.h
framework/include/kw/ui/: imgui_module.h
framework/include/kw/utilities/: endian_utils.h  trace.h  utf8_utils.h
framework/include/kw/utilities/internal/: trace_impl.h
framework/source/kw/base/: allocator.cpp  fast_name.cpp  signal.cpp
framework/source/kw/base/internal/: signal_impl.cpp
framework/source/kw/concurrency/: semaphore.cpp
framework/source/kw/core/: game_native.cpp  i_game.cpp  scene_module.cpp  window_module.cpp
framework/source/kw/core/internal/: message_box_impl.cpp
framework/source/kw/debug/: runtime_error.cpp  stacktrace.cpp
framework/source/kw/ecs/: imgui_module.cpp  scene_module.cpp
framework/source/kw/filesystem/: filesystem_utils.cpp
framework/source/kw/input/: control.cpp  gamepad.cpp  input_module.cpp  key_conversion.cpp  key_conversion.h  keyboard.cpp  mouse.cpp
framework/source/kw/reflection/: any.cpp  reflection.cpp  type.cpp
framework/source/kw/render/: backend_gl.cpp  backend_opengl.cpp  backend_vk.cpp  commands.cpp  render_module.cpp  renderer.cpp  renderer_gl.cpp  renderer_vk.cpp  renderering_backend.cpp  rendering_backend.cpp  semaphore.cpp  update_queue.cpp  vk_validation.cpp
framework/source/kw/render/internal/: backend_opengl.cpp  commands.cpp
framework/source/kw/sound/: sound.cpp  sound_module.cpp  sound_stream.cpp
framework/source/kw/ui/: imgui_module.cpp
framework/source/kw/utilities/: endian_utils.cpp  utf8_utils.cpp
program/easy_reflection/: CMakeLists.txt
program/easy_reflection/source/: main.cpp
program/easy_reflection/test/: a.cpp  b.cpp  c.h
program/testbed/: CMakeLists.txt
program/testbed/source/: main.cpp
program/unittest/: CMakeLists.txt
program/unittest/source/: library.cpp  main.cpp  signal.cpp
program/unittest/source/base/: fast_name.cpp  signal.cpp  string.cpp  string_view.cpp
program/unittest/source/filesystem/: filesystem_utils.cpp
program/unittest/source/reflection/: any.cpp  any_function.cpp  meta.cpp  reflection.cpp  type.cpp
programs/testbed/: CMakeLists.txt  main.cpp
programs/testbed/ogl_triangle/: .gitignore  CMakeLists.txt  PipelineData.cpp  PipelineData.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  main.cpp
programs/testbed/ogl_triangle/glad/: CMakeLists.txt  gl.c  gl.h  khrplatform.h
programs/testbed/ogl_triangle/resources/shaders/: statue.frag  statue.vert  triangle.frag  triangle.vert
programs/testbed/ogl_triangle/stb_image/: CMakeLists.txt
programs/unittest/: CMakeLists.txt  main.cpp
script/cmake/: kurwa.cmake
script/codeformat/: README.md  check_style.py  codeformat.py  format_all.py  install_hook.py  pre-commit
scripts/codeformat/: README.md  codeformat.py  install_hook.py  pre-commit
